# libgou

./: CMakeLists.txt  gou.pc.in
